# personal-os

./: .diag-task.txt  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  GOVERNANCE_MANIFEST.yaml  README.md  STATUS.md  config.example.toml  pyproject.toml
.agent/: status.yaml
audits/: AUDIT-LOG.md  AUDITOR-BRIEF-codex.md  CURRENT-audit-prompt.md  CURRENT-audit-report.md  PHASE-END-AUDITOR-BRIEF-fable.md  PHASE0_AUDIT_BRIEF_codex.md  PHASE0_CODEX_AUDIT.md  PHASE0_FINDINGS.md  h2-rail-dispatch-design-consult-fable-report.md  h2-rail-dispatch-design-consult-prompt.md  human-input-manifest.md  ke-phase-1-phase-end-fable-prompt.md  ke-phase-1-phase-end-fable-report.md  mvp-boundary-checkpoint-prompt.md  phase-A-checkpoint-prompt.md  phase-A-phase-end-fable-report.md  phase-B-checkpoint-prompt.md  test-strategy.md
docs/: ACTIVATION_CHECKLIST.md  AGENT_WORK_PACKET_PROTOCOL.md  ARCHITECTURE.md  CALENDAR_ACTIVATION_REVIEW.md  CALENDAR_KILL_PROCEDURE.md  CODEX_WORKFLOW.md  DRY_RUN_EVIDENCE_BUNDLE.md  FINAL_NONHUMAN_HANDOFF.md  FIRST_LIVE_PILOT_PROTOCOL.md  GMAIL_ACTIVATION_REVIEW.md  GMAIL_KILL_PROCEDURE.md  LIVE_RAIL_ACTIVATION_POLICY.md  MVP_READINESS_GAP_REPORT.md  NON_HUMAN_CLOSURE_PLAN.md  OPENCLAW_MODEL_STRATEGY.md  OPERATOR_HANDOFF_CONTRACT.md  PHASE_13E_D_SYNTHETIC_NO_SEND_DEMO.md  PHASE_13G_PRE_LIVE_READINESS_MATRIX.md  PHASE_14C_CANDIDATE_DECISION_SUPPORT.md  PHASE_14C_CONNECTED_REHEARSAL.md  PHASE_14C_CONNECTIVITY_READINESS.md  PHASE_14C_DECISION_GATE.md  PHASE_14C_SUPERVISED_SMOKE_TEST.md  PHASE_14C_WIDE_NET_REHEARSAL.md  PRD.md  PRE_LIVE_READINESS.md  (+10 more)
(+389 files in other folders)
